--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 # travis encrypt-file publish-key
 # porém mantenha o final:
 # -out ~/.ssh/publish-key -d
-- openssl aes-256-cbc -K $encrypted_b97e2cc36a6e_key -iv $encrypted_b97e2cc36a6e_iv -in publish-key.enc -out publish-key -d
+- openssl aes-256-cbc -K $encrypted_b97e2cc36a6e_key -iv $encrypted_b97e2cc36a6e_iv -in publish-key.enc -out ~/.ssh/publish-key -d
 - chmod u=rw,og= ~/.ssh/publish-key
 - echo "Host github.com" >> ~/.ssh/config
 - echo "  IdentityFile ~/.ssh/publish-key" >> ~/.ssh/config
